# bespoke-ai-suite

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  module-integration-analysis.md  package-lock.json  package.json  personal-rag-setup.md  test-api-direct.js  test-frontend-backend-integration.js
.specstory/history/: 2025-08-06_06-00-토스트가-보이지-않는-이유.md  2025-08-06_07-36-프로젝트-상태-점검하기.md
docs/: README.md
frontend/: .eslintrc.json  next.config.ts  package-lock.json  package.json  tailwind.config.ts
services/campaign/: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
services/campaign/scripts/: init-mongo.js
services/campaign/src/: main.py
services/campaign/src/application/: __init__.py
services/campaign/src/application/dto/: __init__.py  campaign_dto.py  content_dto.py  schedule_dto.py
services/campaign/src/application/interfaces/: __init__.py  content_service.py  event_publisher.py  notification_service.py
services/campaign/src/application/use_cases/: __init__.py  activate_campaign.py  create_campaign.py  get_campaign.py  list_campaigns.py
services/campaign/src/domain/entities/: __init__.py  campaign.py  campaign_content.py  schedule.py
services/campaign/src/domain/repositories/: __init__.py  campaign_content_repository.py  campaign_repository.py  schedule_repository.py
services/campaign/src/domain/value_objects/: __init__.py  budget.py  campaign_status.py  date_range.py  performance_metrics.py  target_audience.py
services/campaign/src/infrastructure/api/: dependencies.py
services/campaign/src/infrastructure/api/routers/: campaigns.py
services/campaign/src/infrastructure/config/: settings.py
services/campaign/src/infrastructure/repositories/: mongo_campaign_repository.py
services/campaign/tests/: test_health.py
tasks/: 01-infrastructure.md  02-backend-services.md  03-frontend.md  04-security.md  05-aiml-integration.md  README.md  quick-start.md
(+215 files in other folders)
