[tool.poetry]
name = "bespoke-campaign-service"
version = "1.0.0"
description = "AI-powered marketing campaign management service"
authors = ["Bespoke AI Team <team@thebespoke-ai.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.2"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = "^2.10.1"
pydantic-settings = "^2.6.1"
motor = "^3.6.0"  # Async MongoDB driver
httpx = "^0.27.2"
aiokafka = "^0.12.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.17"
orjson = "^3.10.11"  # Fast JSON
redis = "^5.2.0"
tenacity = "^9.0.0"  # Retry library
structlog = "^24.4.0"  # Structured logging
prometheus-fastapi-instrumentator = "^7.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
black = "^24.10.0"
ruff = "^0.7.3"
mypy = "^1.13.0"
pre-commit = "^4.0.1"
factory-boy = "^3.3.1"
faker = "^30.8.1"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = []

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--asyncio-mode=auto",
]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__init__.py"]